example/lib/src/generated/errors/errors_localization_gu.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Gujarati (`gu`).
class ErrorsLocalizationGu extends ErrorsLocalization {
  ErrorsLocalizationGu([String locale = 'gu']) : super(locale);

  @override
  String get error => 'ભૂલ થઇ';

  @override
  String get unexpectedError => 'અનપેક્ષિત ભૂલ આવી';

  @override
  String get bugReportSentText => 'બગ રિપોર્ટ સફળતાપૂર્વક મોકલાયેલું છે.';
}
